--- a/mypy.ini
+++ b/mypy.ini
@@ -12,6 +12,9 @@ ignore_missing_imports = True
 [mypy-sqlalchemy.*]
 ignore_missing_imports = True
 
+[mypy-sqlalchemy_utils.*]
+ignore_missing_imports = True
+
 [mypy-flask.*]
 ignore_missing_imports = True
 
