--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+-e git+https://github.com/vishalkumar041298/emis@e68d843e4be0a1eea79f8891bca844a8106d523e#egg=emis
 Flask==2.3.2
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
@@ -15,6 +16,7 @@ protobuf==3.20.3
 python-dotenv==1.0.0
 requests==2.31.0
 SQLAlchemy==2.0.16
+SQLAlchemy-Utils==0.41.1
 typing_extensions==4.6.3
 urllib3==2.0.3
 Werkzeug==2.3.6
